# blogpost-distributed-consistency

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  dependencies.py  main.py  pyproject.toml  utils.py
models/: __init__.py  requests_.py  responses_.py  sql_.py
repositories/: __init__.py  base.py  db.py  sql_.py
routers/: __init__.py  delivery.py  materials.py  products.py  warehouses.py
tests/: conftest.py  test_delivery.py  test_materials.py  test_products.py  test_warehouses.py
